<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user" 
            android:onClick="onAddClick"/>


         <Button
            android:id="@+id/loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" 
            android:onClick="onLoginClick"/>
        
    </LinearLayout>
    
            <LinearLayout
        android:id="@+id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        tools:context=".MainActivity" />




               <Spinner
                   android:id="@+id/spinner1"
                   android:layout_width="0dip"
                   android:layout_height="wrap_content"
                   android:layout_weight="1" />
        
    			</LinearLayout>
    
        

        <LinearLayout
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_pwd"
        tools:context=".MainActivity" />


               <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        
    </LinearLayout>
</LinearLayout>
