<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
        <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        tools:context=".AddUserActivity" />


               <EditText
            android:id="@+id/editText1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint=""
            android:inputType="text"
            android:ems="10" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
    
        

        <LinearLayout
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_pwd"
        tools:context=".AddUserActivity" />


               <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        
    </LinearLayout>


                <LinearLayout
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_pwd"
        tools:context=".AddUserActivity" />


               <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        
    </LinearLayout>

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account" 
                    android:onClick="onAddUserClick"/>

</LinearLayout>



